Many minor changes.